# postfix-log-parser

./: LICENSE  README.md  devenv.nix  pyproject.toml
.github/workflows/: pytest.yml
lognormalizer/: .gitignore  parse.py  parse_test.py
